--- a/.travis.yml
+++ b/.travis.yml
@@ -38,4 +38,9 @@ install:
 
 script:
 # Build the package, its tests, and its docs and run the tests
-- ./deploy.sh
+- stack build
+- stack exec site clean
+- stack exec site build
+- cp -r _site public
+- echo "yes" | rsync -r -e "ssh -i key.prv" public aharries_clearairturbulence@ssh.phx.nearlyfreespeech.net:/home/
+- rm -rf public
