--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,8 @@ before_install:
 
 install:
 # Build dependencies
-- travis_wait 30 stack --no-terminal --install-ghc test --only-dependencies
+- while sleep 9m; do echo "=====[ $SECONDS seconds still running ]====="; done &
+- stack --no-terminal --install-ghc test --only-dependencies --verbose
 
 script:
 # Build the package, its tests, and its docs and run the tests
