--- a/.travis.yml
+++ b/.travis.yml
@@ -32,10 +32,10 @@ before_install:
 - export PATH=$HOME/.local/bin:$PATH
 - travis_retry curl -L https://get.haskellstack.org/stable/linux-x86_64.tar.gz | tar xz --wildcards --strip-components=1 -C ~/.local/bin '*/stack'
 - openssl aes-256-cbc -K $encrypted_7aa13d89ac08_key -iv $encrypted_7aa13d89ac08_iv -in key.enc -out key.prv -d
+- chmod 0400 key.prv
 
 install:
 # Build dependencies
-- while sleep 9m; do echo "=====[ $SECONDS seconds still running ]====="; done &
 - stack --no-terminal --install-ghc test --only-dependencies --flag hakyll:-previewServer --flag hakyll:-watchServer -j $(nproc)
 
 script:
