--- a/.travis.yml
+++ b/.travis.yml
@@ -45,5 +45,7 @@ script:
 - stack exec site build
 - cp -r _site public
 - ssh-keyscan ssh.phx.nearlyfreespeech.net >> ~/.ssh/known_hosts
-- rsync -r -e "ssh -i key.prv aharries_clearairturbulence@ssh.phx.nearlyfreespeech.net" public aharries_clearairturbulence@ssh.phx.nearlyfreespeech.net:/home/
+- eval $(ssh-agent)
+- ssh-add key.prv
+- rsync -r public aharries_clearairturbulence@ssh.phx.nearlyfreespeech.net:/home/
 - rm -rf public
