--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ sudo: false
 language: generic
 cache:
   directories:
-  - "$HOME/.stack"
+  - $HOME/.ghc
+  - $HOME/.cabal
+  - $HOME/.stack
+  - $TRAVIS_BUILD_DIR/.stack-work
 
 addons:
   apt:
